fix: play demo z-index

--- a/styles/components/play-demo-box.module.scss
+++ b/styles/components/play-demo-box.module.scss
@@ -20,10 +20,10 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE 10+ */
-    user-select: none; 
+	-webkit-user-select: none; /* Safari */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE 10+ */
+	user-select: none;
 }
 
 .play-demo-content {
@@ -31,6 +31,7 @@
 	border-radius: 8px;
 	border: 8px solid #ffffff1a;
 	text-decoration: none;
+	z-index: 999;
 
 	&:hover {
 		cursor: pointer;
